# tapir

./: .gitignore  .gitmodules  Makefile.am  README.md  autogen.sh  configure.ac  ltfs_to_tar.py
docs/: index-format.md
m4/: ax_cxx_compile_stdcxx_20.m4  ax_cxx_try_stdcxx_23.m4
src/: Makefile.am  cli.cpp  cli.hpp  index.cpp  index.hpp  main.cpp  manifest.cpp  manifest.hpp  mktapir.cpp  raii.hpp  security.cpp  security.hpp  tape.cpp  tape.hpp  tapir.cpp  tar_io.cpp  tar_io.hpp  test_block_offset.cpp  test_cli.cpp  test_cli_flags.sh  test_index.cpp  test_security.cpp  test_seek_plan.cpp  test_tape_append.sh  test_tape_common.hpp  test_tape_import.sh  test_tape_import_fix.sh  test_tape_lib.sh  test_tape_mount.sh  test_tape_seek.cpp  test_tape_seq.cpp  test_tape_upgrade.sh  test_tar_io.cpp  tfsck.cpp  writer.cpp  writer.hpp  writer_task.cpp  writer_task.hpp
